--- a/ui-of-course-selection/package.json
+++ b/ui-of-course-selection/package.json
@@ -19,8 +19,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "pinia": "^3.0.3",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@prettier/plugin-oxc": "^0.0.4",
