--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ asyncpg==0.29.0
 aiosqlite==0.19.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+bcrypt==3.2.2
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
