--- a/ui-of-course-selection/package.json
+++ b/ui-of-course-selection/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.13.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
