--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ JWT_SECRET_KEY=CHANGE-THIS-TO-A-SECURE-RANDOM-VALUE-IN-PRODUCTION
 # Admin Password - MUST be changed in production!
 ADMIN_PASSWORD=admin123
 
+# Debug Mode - Set to true to disable password encryption (FOR DEBUGGING ONLY!)
+DEBUG_MODE=false
+
 # Internal Service Token - MUST be changed in production!
 # This should be the same across all services
 INTERNAL_TOKEN=change-this-internal-token-in-production
